# Met

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  PanelApp.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gesture.rs  input_inject.rs  lib.rs  main.rs  window_manager.rs
src-tauri/src/gestures/: global.rs  mod.rs
src-tauri/src/gestures/recognizers/: circle.rs  mod.rs
src/components/: ActionPanel.vue
src/composables/: usePanelController.ts  useWindowDrag.ts
src/pets/: PetApp.ts
src/pets/seagull/: SeagullPet.ts  gestures.ts
src/stores/: petStore.ts
src/types/: index.ts
