[package]
name = "met"
version = "0.1.0"
description = "Met Desktop Pet"
authors = ["Mundus"]
edition = "2021"
build = "build.rs"

[lib]
name = "met_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "met"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# 调用 Windows API 实现全局鼠标钩子
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

# 输入注入（Phase 3+）
enigo = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
